--- a/reveal.js-3.7.0/custom_theme.css
+++ b/reveal.js-3.7.0/custom_theme.css
@@ -42,11 +42,17 @@
     width: 40%;
 }
 
+
+/* List dash style*/
 .reveal ul {
     list-style-type: none;
 }
 
 .reveal ul ul {
+    list-style-type: none;
+}
+
+.reveal ul ul ul {
     list-style-type: none;
 }
 
